add products table

--- a/Views/Ecommerce/Index.cshtml
+++ b/Views/Ecommerce/Index.cshtml
@@ -1,10 +1,202 @@
-
 <section class="container-root">
     <div class="container">
+        <div class="row">
+            <div class="col-2">
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#New-Product">
+                    Agregar Producto
+                </button>
+            </div>
+        </div>
+        <hr />
         <div class="row justify-content-md-center card">
             <div class="col-md-auto">
-                productos
+                @{
+                    List<Product> LtsProducts = ViewBag.LtsProducts;
+                    if (LtsProducts.Count > 0)
+                    {
+                        <table class="table table-sm">
+                            <thead class="table-light">
+                                <tr class="table-primary">
+                                    <th scope="col">#</th>
+                                    <th scope="col">Código Auxiliar</th>
+                                    <th scope="col">Nombre</th>
+                                    <th scope="col">Descripción</th>
+                                    <th scope="col">Presentación</th>
+                                    <th scope="col">Stock</th>
+                                    <th scope="col">Costos</th>
+                                    <th scope="col">Precio Venta</th>
+                                    <th scope="col">Detalles</th>
+                                    <th scope="col">Editar</th>
+                                    <th scope="col">Eliminar</th>
+                                </tr>
+                            </thead>
+                            @foreach (Product pr in LtsProducts)
+                            {
+                                <tr class="table-light">
+                                    <th scope="row">@pr.ProductId </th>
+                                    <th scope="row">@pr.ProductCodeAuxiliar </th>
+                                    <th scope="row">@pr.ProductName </th>
+                                    <th scope="row">@pr.ProductDescription </th>
+                                    <th scope="row">@pr.ProductPresentation </th>
+                                    <th scope="row">@pr.ProductStock </th>
+                                    <th scope="row">@pr.ProductCoast </th>
+                                    <th scope="row">@pr.ProductPrice </th>
+                                    <th scope="row">
+                                        <button type="button" class="btn btn-outline-primary" data-toggle="modal"
+                                            data-target="#View-Product">
+                                            <i class="bi bi-info-circle"></i>
+                                        </button>
+                                    </th>
+                                    <th scope="row">
+                                        <button type="button" class="btn btn-outline-primary" data-toggle="modal"
+                                            data-target="#Edit-Product">
+                                            <i class="bi bi-pencil-square"></i>
+                                        </button>
+                                    </th>
+                                    <th scope="row">
+                                        <button type="button" class="btn btn-outline-danger">
+                                            <i class="bi bi-x-circle-fill"></i>
+                                        </button>
+                                    </th>
+                                </tr>
+                            }
+                        </table>
+                    }
+                }
             </div>
         </div>
     </div>
 </section>
+
+
+
+
+<!-- Modal New-->
+<div class="modal fade" id="New-Product" role="dialog">
+    <div class="modal-dialog  modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Nuevo Producto</h5>
+                <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal" aria-label="Close">X</button>
+            </div>
+            <form>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-8">
+                            <div class="mb-2 row">
+                                <label for="staticEmail" class="col-sm-4 col-form-label">Nombre:</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control" >
+                                </div>
+                            </div>
+                            <div class="mb-2 row">
+                                <label for="staticEmail" class="col-sm-4 col-form-label">Descripción:</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control" >
+                                </div>
+                            </div>
+                            <div class="mb-2 row">
+                                <label for="staticEmail" class="col-sm-4 col-form-label">Código Auxiliar:</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control" >
+                                </div>
+                            </div>
+                            <div class="mb-2 row">
+                                <label for="staticEmail" class="col-sm-4 col-form-label">Tamaño:</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control" >
+                                </div>
+                            </div>
+                            <div class="mb-2 row">
+                                <label for="staticEmail" class="col-sm-4 col-form-label">Presentación:</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control" >
+                                </div>
+                            </div>
+                            
+                        </div>
+                        <div class="col-3  ml-1">
+                            <div class="card">
+                                <div class="card-body">
+                                    <canvas id="myCanvas" width="100" height="200"></canvas>
+                                </div>
+                            </div>
+                            <label class="btn btn-primary">
+                                <input type="file" style="display: none;" id="imageInput" />
+                                Subir Imagen
+                            </label>
+                            <input type="hidden" id="modal-new-img-base64" name="imgUser" />
+                        </div>
+                    </div>
+
+                    <div class="row" style="display: block;">
+                        <div class="tab">
+                            <button class="tablinks active" onclick="openTab(event, 'Marca')">Marca</button>
+                            <button class="tablinks" onclick="openTab(event, 'Categoria')">Categoria</button>
+                            <button class="tablinks" onclick="openTab(event, 'Proveedor')">Proveedor</button>
+                            <button class="tablinks" onclick="openTab(event, 'Inventario')">Inventario</button>
+                        </div>
+
+                        <div id="Marca" class="tabcontent">
+                            marca|
+                        </div>
+                        <div id="Categoria" class="tabcontent">
+                            Categoria
+                        </div>
+                        <div id="Proveedor" class="tabcontent">
+                            Proveedor
+                        </div>
+                        <div id="Inventario" class="tabcontent">
+                            <div class="mb-2 row">
+                                <label for="staticEmail" class="col-sm-4 col-form-label">Costo Unitario:</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control" >
+                                </div>
+                            </div>
+                            <div class="mb-2 row">
+                                <label for="staticEmail" class="col-sm-4 col-form-label">Precio de Venta:</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control" >
+                                </div>
+                            </div>
+                            <div class="mb-2 row">
+                                <label for="staticEmail" class="col-sm-4 col-form-label">Stock:</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control" >
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cerrar</button>
+                    <button type="submit" class="btn btn-outline-primary">Guardar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<!-- Modal Edit-->
+<div class="modal fade" id="Edit-Product" role="dialog">
+    <div class="modal-dialog  modal-xl">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Editar Producto</h5>
+                <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal" aria-label="Close">X</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal Detail-->
+<div class="modal fade" id="View-Product" role="dialog">
+    <div class="modal-dialog  modal-xl">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Detalles Producto</h5>
+                <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal" aria-label="Close">X</button>
+            </div>
+        </div>
+    </div>
+</div>
