--- a/Views/Ecommerce/Index.cshtml
+++ b/Views/Ecommerce/Index.cshtml
@@ -138,13 +138,49 @@
                         </div>
 
                         <div id="Marca" class="tabcontent">
-                            marca|
+                            <label class="form-label">Seleccione una Categoria</label>
+                            @{
+                                List<Brand> brands = ViewBag.LtsBrands;
+                                @foreach (Brand br in brands)
+                                {
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="brandSelected" id="@br.BrandId" value="@br.BrandId"> 
+                                    <label class="form-check-label" for="@br.BrandId">
+                                    @br.BrandName - @br.BrandDescription
+                                    </label>
+                                </div>
+                                }
+                            }
                         </div>
                         <div id="Categoria" class="tabcontent">
-                            Categoria
+                            <label class="form-label">Seleccione una Categoria</label>
+                            @{
+                                List<Category> categories = ViewBag.LtsCategorys;
+                                @foreach (Category cr in categories)
+                                {
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="categorySelected" id="@cr.CategoryId" value="@cr.CategoryId">
+                                    <label class="form-check-label" for="@cr.CategoryId">
+                                    @cr.CategoryName : @cr.CategoryDescription
+                                    </label>
+                                </div>
+                                }
+                            }
                         </div>
                         <div id="Proveedor" class="tabcontent">
-                            Proveedor
+                             <label class="form-label">Seleccione un Proveedor</label>
+                            @{
+                                List<UserApp> users = ViewBag.LtsProvaiders;
+                                @foreach (UserApp usp in users)
+                                {
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="providerSelected" id="@usp.UserAppId" value="@usp.UserAppId">
+                                    <label class="form-check-label" for="@usp.UserAppId">
+                                    @usp.userName @usp.userLastname (@usp.userNumDocument)
+                                    </label>
+                                </div>
+                                }
+                            }
                         </div>
                         <div id="Inventario" class="tabcontent">
                             <div class="mb-2 row">
@@ -185,6 +221,103 @@
                 <h5 class="modal-title">Editar Producto</h5>
                 <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal" aria-label="Close">X</button>
             </div>
+            <form>
+                                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-8">
+                            <div class="mb-2 row">
+                                <label for="staticEmail" class="col-sm-4 col-form-label">Nombre:</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control" >
+                                </div>
+                            </div>
+                            <div class="mb-2 row">
+                                <label for="staticEmail" class="col-sm-4 col-form-label">Descripción:</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control" >
+                                </div>
+                            </div>
+                            <div class="mb-2 row">
+                                <label for="staticEmail" class="col-sm-4 col-form-label">Código Auxiliar:</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control" >
+                                </div>
+                            </div>
+                            <div class="mb-2 row">
+                                <label for="staticEmail" class="col-sm-4 col-form-label">Tamaño:</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control" >
+                                </div>
+                            </div>
+                            <div class="mb-2 row">
+                                <label for="staticEmail" class="col-sm-4 col-form-label">Presentación:</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control" >
+                                </div>
+                            </div>
+                            
+                        </div>
+                        <div class="col-3  ml-1">
+                            <div class="card">
+                                <div class="card-body">
+                                    <canvas id="myCanvas" width="100" height="200"></canvas>
+                                </div>
+                            </div>
+                            <label class="btn btn-primary">
+                                <input type="file" style="display: none;" id="imageInput" />
+                                Subir Imagen
+                            </label>
+                            <input type="hidden" id="modal-new-img-base64" name="imgUser" />
+                        </div>
+                    </div>
+
+                    <div class="row" style="display: block;">
+                        <div class="tab">
+                            <button class="tablinks active" onclick="openTab(event, 'Marca')">Marca</button>
+                            <button class="tablinks" onclick="openTab(event, 'Categoria')">Categoria</button>
+                            <button class="tablinks" onclick="openTab(event, 'Proveedor')">Proveedor</button>
+                            <button class="tablinks" onclick="openTab(event, 'Inventario')">Inventario</button>
+                        </div>
+
+                        <div id="Marca" class="tabcontent">
+                            <label class="form-label">Seleccione una Categoria</label>
+                          
+                        </div>
+                        <div id="Categoria" class="tabcontent">
+                            <label class="form-label">Seleccione una Categoria</label>
+                        
+                        </div>
+                        <div id="Proveedor" class="tabcontent">
+                             <label class="form-label">Seleccione un Proveedor</label>
+                          
+                        </div>
+                        <div id="Inventario" class="tabcontent">
+                            <div class="mb-2 row">
+                                <label for="staticEmail" class="col-sm-4 col-form-label">Costo Unitario:</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control" >
+                                </div>
+                            </div>
+                            <div class="mb-2 row">
+                                <label for="staticEmail" class="col-sm-4 col-form-label">Precio de Venta:</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control" >
+                                </div>
+                            </div>
+                            <div class="mb-2 row">
+                                <label for="staticEmail" class="col-sm-4 col-form-label">Stock:</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control" >
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cerrar</button>
+                    <button type="submit" class="btn btn-outline-primary">Guardar</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
@@ -200,3 +333,30 @@
         </div>
     </div>
 </div>
+
+@section Scripts {
+<script>
+let imgInput = document.getElementById('imageInput');
+    imgInput.addEventListener('change', function(e) {
+        if(e.target.files) {
+        let imageFile = e.target.files[0]; //here we get the image file
+        var reader = new FileReader();
+        reader.readAsDataURL(imageFile);
+        reader.onloadend = function (e) {
+            var myImage = new Image(); // Creates image object
+            myImage.src = e.target.result; // Assigns converted image to image object
+            myImage.onload = function(ev) {
+            var myCanvas = document.getElementById("myCanvas"); // Creates a canvas object
+            var myContext = myCanvas.getContext("2d"); // Creates a contect object
+            myCanvas.width = myImage.width; // Assigns image's width to canvas
+            myCanvas.height = myImage.height; // Assigns image's height to canvas
+            myContext.drawImage(myImage,0,0); // Draws the image on canvas
+            let imgData = myCanvas.toDataURL("image/jpeg",0.75); // Assigns image base64 string in jpeg format to a variable
+            console.log(imgData);
+            document.getElementById("modal-new-img-base64").value = imgData;
+            }
+        }
+        }
+    });
+</script>
+}
